shawdathar prov names

--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -4,7 +4,7 @@
  LOADING_TIP_2:0 "'Ard Yanduz was a Yaltazim state which unified the aqerbic peninsula in the VII century."
  LOADING_TIP_3:0 "Donuçakar converted to saelianism after a diplomatic pact between the king and the Sigilian Emperor in the XIII century."
  LOADING_TIP_4:0 "Eneratian Emperorship has degenerated into a merely informal title which is held by a Chofeudian ruler Cyrille Eneratius de Cuei."
- LOADING_TIP_5:0 "Members of the Ramh Usra claim, that they come from musarfic god of war - Alramha."
+ LOADING_TIP_5:0 "Members of the Ramh Usra claim that they descend from the Musarfic god of war - Alramha."
  LOADING_TIP_6:0 "What was once homeland of the Pamkusean people is now ruled by Visparayan states - remnants of the Varazani Empire."
  LOADING_TIP_7:0 "Tetrarchy is responsible for electing the next ruler of Sigilian church, but with each year their power over the emperor grows."
  LOADING_TIP_8:0 "Brianola is a peasant republic, but with a dynastical dictatorship in charge"
@@ -19,6 +19,6 @@
  LOADING_TIP_17:0 "Grafoulan monk Liemar was not the first to attempt reforming the Saelian church, but he surely was the most successful."
  LOADING_TIP_18:0 "Saelius died from trichinosis."
  LOADING_TIP_19:0 "Absolutist monarchy of Bogiland of the XVII century became a role-model for other powerful states in Taedium."
- LOADING_TIP_20:0 "Many people in Tummland believe that Ehrenis are the literal servants of evil spirit of Ilkeä."
+ LOADING_TIP_20:0 "Many people in Tummland believe that Ehrenis are the literal servants of evil spirit Ilkeä."
  LOADING_TIP_21:0 "King Pepik 'The Mad' owned 2 boars, 3 camels and an elephant."
  
