--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1895,16 +1895,16 @@
  PROV1894:0 "1894"
  PROV1895:0 "1895"
  PROV1896:0 "Forswigians"
- PROV1897:0 "1897"
- PROV1898:0 "1898"
- PROV1899:0 "1899"
- PROV1900:0 "1900"
- PROV1901:0 "1901"
- PROV1902:0 "1902"
- PROV1903:0 "1903"
+ PROV1897:0 "Peathaod"
+ PROV1898:0 "Shawdurth"
+ PROV1899:0 "Debomanaret"
+ PROV1900:0 "Bobudishot"
+ PROV1901:0 "Gahdemithook"
+ PROV1902:0 "Susunogoen"
+ PROV1903:0 "Shawin"
  PROV1904:0 "1904"
  PROV1905:0 "1905"
- PROV1906:0 "1906"
+ PROV1906:0 "Kessyemethook"
  PROV1907:0 "1907"
  PROV1908:0 "1908"
  PROV1909:0 "1909"
@@ -1919,20 +1919,20 @@
  PROV1918:0 "Minisians"
  PROV1919:0 "1919"
  PROV1920:0 "1920"
- PROV1921:0 "1921"
+ PROV1921:0 "Bayesh"
  PROV1922:0 "1922"
  PROV1923:0 "1923"
  PROV1924:0 "1924"
  PROV1925:0 "1925"
- PROV1926:0 "1926"
- PROV1927:0 "1927"
- PROV1928:0 "1928"
- PROV1929:0 "1929"
- PROV1930:0 "1930"
+ PROV1926:0 "Methiwe"
+ PROV1927:0 "Woodschabouth"
+ PROV1928:0 "Odusweekcha"
+ PROV1929:0 "Moideshweshe"
+ PROV1930:0 "Zadrotun"
  PROV1931:0 "1931"
  PROV1932:0 "1932"
  PROV1933:0 "1933"
- PROV1934:0 "1934"
+ PROV1934:0 "Ashmubadoo"
  PROV1935:0 "1935"
  PROV1936:0 "1936"
  PROV1937:0 "1937"
@@ -1942,13 +1942,13 @@
  PROV1941:0 "1941"
  PROV1942:0 "1942"
  PROV1943:0 "1943"
- PROV1944:0 "1944"
- PROV1945:0 "1945"
- PROV1946:0 "1946"
- PROV1947:0 "1947"
+ PROV1944:0 "Tedebukoshawa"
+ PROV1945:0 "Washewakche"
+ PROV1946:0 "Chepashick"
+ PROV1947:0 "Odosuatejew"
  PROV1948:0 "1948"
  PROV1949:0 "Costervan Sea"
- PROV1950:0 "1950"
+ PROV1950:0 "Hadyachutook"
  PROV1951:0 "1951"
  PROV1952:0 "1952"
  PROV1953:0 "1953"
