panpallpan prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -256,7 +256,7 @@
  PROV255:0 "Ksiva"
  PROV256:0 "Ristmaa"
  PROV257:0 "Hänei"
- PROV258:0 "258"
+ PROV258:0 "Western Almalan Current"
  PROV259:0 "Tätuttänenai"
  PROV260:0 "Enoletä"
  PROV261:0 "Tälatami"
@@ -283,7 +283,7 @@
  PROV282:0 "Isineliteka"
  PROV283:0 "Silettenut"
  PROV284:0 "Eniitolaan"
- PROV285:0 "285"
+ PROV285:0 "Abadian Rift"
  PROV286:0 "Lisiin"
  PROV287:0 "Talisai"
  PROV288:0 "Tälis"
@@ -293,7 +293,7 @@
  PROV292:0 "Kuke"
  PROV293:0 "Olitäsin"
  PROV294:0 "Lestal"
- PROV295:0 "295"
+ PROV295:0 "Northern Almalan Current"
  PROV296:0 "Seva"
  PROV297:0 "Rõugemaa"
  PROV298:0 "Käbala"
@@ -700,9 +700,9 @@
  PROV699:0 "Neurech"
  PROV700:0 "Redingen"
  PROV701:0 "Sendiegen"
- PROV702:0 ""
+ PROV702:0 "702"
  PROV703:0 "Topochy"
- PROV704:0 "Coast of Algharbiya"
+ PROV704:0 "704"
  PROV705:0 "Sepretola"
  PROV706:0 "Mrawa"
  PROV707:0 "Lebyeni"
@@ -1155,12 +1155,12 @@
  PROV1154:0 "Qarasam Sea"
  PROV1155:0 "Belezzan Approach"
  PROV1156:0 "Hawaldvi Coast"
- PROV1157:0 "1157"
+ PROV1157:0 "Coast of Minorca"
  PROV1158:0 "Icpacxochitl"
  PROV1159:0 "Dakhilian Sea"
  PROV1160:0 "Teocuitlahua"
  PROV1161:0 "Mayaquen"
- PROV1162:0 "1162"
+ PROV1162:0 "Southern Almalan Current"
  PROV1163:0 "Ichinoa"
  PROV1164:0 "Tlacati"
  PROV1165:0 "Ktuhke Bay"
@@ -1408,7 +1408,7 @@
  PROV1407:0 "Vinâqar"
  PROV1408:0 "Bruzhas"
  PROV1409:0 "Siuatepetl"
- PROV1410:0 "1410"
+ PROV1410:0 "Huitzachen"
  PROV1411:0 "Temamani"
  PROV1412:0 "Maccuauhuitl"
  PROV1413:0 "1413"
@@ -1486,7 +1486,7 @@
  PROV1485:0 "Dušagan Sea"
  PROV1486:0 "1486"
  PROV1487:0 "Vazixani Coast"
- PROV1488:0 "1488"
+ PROV1488:0 "Tlahcapa"
  PROV1489:0 "1489"
  PROV1490:0 "Achpeten"
  PROV1491:0 "Kuatanar"
@@ -1557,26 +1557,26 @@
  PROV1556:0 "Matzaki"
  PROV1557:0 "Itz'pach"
  PROV1558:0 "Pachulel"
- PROV1559:0 "1559"
- PROV1560:0 "1560"
+ PROV1559:0 "Zaruche"
+ PROV1560:0 "Tsicha"
  PROV1561:0 "Northern Frontier Sea"
- PROV1562:0 "1562"
- PROV1563:0 "1563"
+ PROV1562:0 "Nidenehaa"
+ PROV1563:0 "Chahoot"
  PROV1564:0 "Yaxu'te"
  PROV1565:0 "Wanachti"
  PROV1566:0 "Shaboni Coast"
  PROV1567:0 "Nabku'tzil"
  PROV1568:0 "Bradbrem Strait"
- PROV1569:0 "1569"
+ PROV1569:0 "Niniza"
  PROV1570:0 "Yawnitchak"
- PROV1571:0 "1571"
- PROV1572:0 "1572"
+ PROV1571:0 "Tsichinila"
+ PROV1572:0 "Southern Dalvian Waters"
  PROV1573:0 "Central Arctic Sea"
- PROV1574:0 "1574"
- PROV1575:0 "1575"
- PROV1576:0 "1576"
- PROV1577:0 "1577"
- PROV1578:0 "1578"
+ PROV1574:0 "Mushorq'aa"
+ PROV1575:0 "Kweltana"
+ PROV1576:0 "Niinipe"
+ PROV1577:0 "Yeniheel"
+ PROV1578:0 "Ndaha"
  PROV1579:0 "Maranga"
  PROV1580:0 "Itchilo"
  PROV1581:0 "Jator"
@@ -1594,7 +1594,7 @@
  PROV1593:0 "1593"
  PROV1594:0 "Northern Dalvian Waters"
  PROV1595:0 "1595"
- PROV1596:0 "1596"
+ PROV1596:0 "Coast of Dies Nua"
  PROV1597:0 "1597"
  PROV1598:0 "1598"
  PROV1599:0 "1599"
@@ -1620,7 +1620,7 @@
  PROV1619:0 "Liemarlander Coast"
  PROV1620:0 "1620"
  PROV1621:0 "1621"
- PROV1622:0 "1622"
+ PROV1622:0 "Atlow Bay"
  PROV1623:0 "1623"
  PROV1624:0 "1624"
  PROV1625:0 "1625"
@@ -1717,7 +1717,7 @@
  PROV1716:0 "Akhakal" 
  PROV1717:0 "1717" #!
  PROV1718:0 "1718" #!
- PROV1719:0 "1719"
+ PROV1719:0 "Coast of Wahida"
  PROV1720:0 "Karisavela"
  PROV1721:0 "Karwazi"
  PROV1722:0 "Marilaq"
@@ -1769,7 +1769,7 @@
  PROV1768:0 "1768"
  PROV1769:0 "1769"
  PROV1770:0 "1770"
- PROV1771:0 "1771"
+ PROV1771:0 "Coast of Qudsala"
  PROV1772:0 "1772"
  PROV1773:0 "1773"
  PROV1774:0 "1774"
@@ -1876,7 +1876,7 @@
  PROV1875:0 "1875"
  PROV1876:0 "1876"
  PROV1877:0 "1877"
- PROV1878:0 "1878"
+ PROV1878:0 "Jarithan Coast"
  PROV1879:0 "1879"
  PROV1880:0 "1880"
  PROV1881:0 "1881"
@@ -2401,25 +2401,25 @@
  PROV2400:0 "2400"
  PROV2401:0 "2401"
  PROV2402:0 "2402"
- PROV2403:0 "2403"
+ PROV2403:0 "Bizhan"
  PROV2404:0 "2404"
- PROV2405:0 "2405"
- PROV2406:0 "2406"
- PROV2407:0 "2407"
- PROV2408:0 "2408"
+ PROV2405:0 "Nizhala"
+ PROV2406:0 "Minshialtzo"
+ PROV2407:0 "Choshke"
+ PROV2408:0 "Hinagoi"
  PROV2409:0 "2409"
- PROV2410:0 "2410"
- PROV2411:0 "2411"
- PROV2412:0 "2412"
- PROV2413:0 "2413"
- PROV2414:0 "2414"
- PROV2415:0 "2415"
+ PROV2410:0 "Hutza"
+ PROV2411:0 "Bianagaii"
+ PROV2412:0 "Adachte"
+ PROV2413:0 "Dahatzago"
+ PROV2414:0 "Nihobicha"
+ PROV2415:0 "Hutza"
  PROV2416:0 "2416"
- PROV2417:0 "2417"
+ PROV2417:0 "Anachezee"
  PROV2418:0 "2418"
  PROV2419:0 "2419"
  PROV2420:0 "2420"
- PROV2421:0 "2421"
+ PROV2421:0 "Hutza"
  PROV2422:0 "2422"
  PROV2423:0 "2423"
  PROV2424:0 "2424"
@@ -2434,7 +2434,7 @@
  PROV2433:0 "2433"
  PROV2434:0 "2434"
  PROV2435:0 "2435"
- PROV2436:0 "2436"
+ PROV2436:0 "Western Panpallpan Sea"
  PROV2437:0 "2437"
  PROV2438:0 "2438"
  PROV2439:0 "2439"
@@ -2458,7 +2458,7 @@
  PROV2457:0 "2457"
  PROV2458:0 "2458"
  PROV2459:0 "2459"
- PROV2460:0 "2460"
+ PROV2460:0 "Singiica"
  PROV2461:0 "Piteba"
  PROV2462:0 "Pinita"
  PROV2463:0 "Huena"
@@ -2543,7 +2543,7 @@
  PROV2542:0 "2542"
  PROV2543:0 "2543"
  PROV2544:0 "2544"
- PROV2545:0 "2545"
+ PROV2545:0 "Eastern Panpallpan Sea"
  PROV2546:0 "2546"
  PROV2547:0 "2547"
  PROV2548:0 "2548"
