saelian empire second path

--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -64,3 +64,6 @@
  blawenn_region:0 "Blawenn"
  thiara_region:0 "Thiara"
  upper_sipiwimekya_region:0 "Upper Sipiwimekya"
+
+ sahilan_coast_ocean:0 "Sahilan Coast"
+ eastern_chantlian_coast_ocean:0 "Northeastern Amin Ocean"
