--- a/localisation/generic_events_l_english.yml
+++ b/localisation/generic_events_l_english.yml
@@ -3304,7 +3304,7 @@
  EVTOPTA9074:0 "Swear Oath of Loyalty"
  EVTOPTB9074:0 "[Emperor.Ruler.GetSheHe] may take our lives, but [Emperor.Ruler.GetSheHe] will never take our freedom."
  EVTNAME9075:0 "Renovatio Imperii Saelianum"
- EVTDESC9075:0 "In the year of our lord, [GetYear], the most serene Augustus [Emperor.Monarch.GetName], Saelianum Imperator, crowned by God, has again convened the Estates of the Saelian Empire. The Diet has agreed to a motion to unite the disparate states of The Empire into a nation state and recrown the [Emperor.Monarch.GetTitle] as its hereditary ruler."
+ EVTDESC9075:0 "In the year of our lord, [GetYear], the most serene Augustus [Emperor.Monarch.GetName], Saelianum Imperator, crowned by God, has again convened the Estates of the Saelian Empire. The Diet has agreed to a motion to unite the disparate states of The Empire into a nation state and recrown the [Emperor.Monarch.GetTitle] as its true ruler."
  EVTOPTA9075:0 "Claim the crown!"
  hre_core_tt:0 "§Y[Root.GetName]§! gains a core on every province of the Empire, which is NOT owned by a member of the Empire."
  hre_inheritance_tt:0 "Every member of the §YHoly Roman Empire§! will be asked to join §Y[Root.GetName]§!."
