--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2362,20 +2362,20 @@
  PROV2361:0 "2361"
  PROV2362:0 "Otomoca"
  PROV2363:0 "2363"
- PROV2364:0 "2364"
+ PROV2364:0 "South Blawenn Coast"
  PROV2365:0 "Nitaypa"
  PROV2366:0 "Neraque"
  PROV2367:0 "Majopeta"
  PROV2368:0 "2368"
- PROV2369:0 "2369"
+ PROV2369:0 "Huaxtan Coast"
  PROV2370:0 "2370"
- PROV2371:0 "2371"
+ PROV2371:0 "Milortirian Coast"
  PROV2372:0 "2372"
  PROV2373:0 "2373"
  PROV2374:0 "2374"
  PROV2375:0 "2375"
  PROV2376:0 "2376"
- PROV2377:0 "2377"
+ PROV2377:0 "Thiaran Coast"
  PROV2378:0 "2378"
  PROV2379:0 "Saguaca"
  PROV2380:0 "2380"
