generic naval missions
Rule the waves!

--- a/localisation/TD_03_missions_generic_l_english.yml
+++ b/localisation/TD_03_missions_generic_l_english.yml
@@ -95,6 +95,21 @@
  generic_best_of_the_best_title:0 "Best of the Best"
  generic_best_of_the_best_desc:0 ""
  TD_best_of_the_best:0 "Best of the Best"
+ 
+ generic_foundation_of_a_navy_title:0 "Foundation of a Navy"
+ generic_foundation_of_a_navy_desc:0 ""
+ has_naval_reformer_tt:0 "If we recruited a naval reformer"
+ TD_freshly_built_navy:0 "Freshly built navy"
+
+ generic_expand_naval_infrastructure_title:0 "Dockyard Expansion"
+ generic_expand_naval_infrastructure_desc:0 ""
+ TD_naval_recruitment_center:0 "Naval recruitment center"
+ TD_improved_ship_designs:0 "Improved ship designs"
+
+ generic_rule_the_waves_title:0 "Rule the waves!"
+ generic_rule_the_waves_desc:0 ""
+ TD_generic_mission_naval_supremacy:0 "Naval Supremacy"
+ TD_standarized_marine_equipment:0 "Standarization of Marine equipment"
 
  generic_way_of_conquest_title:0 "Way of Conquest"
  generic_way_of_conquest_desc:0 ""
@@ -204,6 +219,7 @@
  td_missions.1.desc:0 "Our nation stands at the crossroad. As the power of [Root.GetName] and influence grows we need to decide what is the ambition of this magnificent nation."
  td_missions.1.a:0 "A massive army"
  td_missions.1.b:0 "Unstoppable army"
+ td_missions.1.d:0 "Naval supremacy"
  td_missions.2.t:0 "Political Future of [Root.GetName]"
  td_missions.2.desc:0 "Our nation stands at the crossroad. As the power of [Root.GetName] and influence grows we need to decide what is the ambition of this magnificent nation."
  td_missions.2.a:0 "Continent-spanning empire"
