Naval missions minor fixes

--- a/localisation/TD_03_missions_generic_l_english.yml
+++ b/localisation/TD_03_missions_generic_l_english.yml
@@ -98,18 +98,18 @@
  
  generic_foundation_of_a_navy_title:0 "Foundation of a Navy"
  generic_foundation_of_a_navy_desc:0 ""
- has_naval_reformer_tt:0 "If we recruited a naval reformer"
- TD_freshly_built_navy:0 "Freshly built navy"
+ has_naval_reformer_tt:0 "If we recruited a naval reformer, we will also gain the following:"
+ TD_freshly_built_navy:0 "Freshly Built Navy"
 
  generic_expand_naval_infrastructure_title:0 "Dockyard Expansion"
  generic_expand_naval_infrastructure_desc:0 ""
- TD_naval_recruitment_center:0 "Naval recruitment center"
- TD_improved_ship_designs:0 "Improved ship designs"
+ TD_naval_recruitment_center:0 "Naval Recruitment Center"
+ TD_improved_ship_designs:0 "Improved Ship Designs"
 
  generic_rule_the_waves_title:0 "Rule the waves!"
  generic_rule_the_waves_desc:0 ""
  TD_generic_mission_naval_supremacy:0 "Naval Supremacy"
- TD_standarized_marine_equipment:0 "Standarization of Marine equipment"
+ TD_standarized_marine_equipment:0 "Standarization of Marine Equipment"
 
  generic_way_of_conquest_title:0 "Way of Conquest"
  generic_way_of_conquest_desc:0 ""
