--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -48,7 +48,7 @@
  his_generosity_desc:0 "The gift of presence of Saletiarn is the greatest honor in the world."
  his_ambition:0 "Ambition"
  his_ambition_desc:0 "The dreams of Saletiarn are just as big as the World itself."
- wirosepan_select_aspect:0 "Select Favoured Aspect of Saelius"
+ wirosepan_select_aspect:0 "Favoured Aspect of Saelius"
 
  argenia.1.t:0 "Death of Sexbald"
  argenia.1.desc:0 "The sad passing of the late King Sexbald of Wyrmegnac has caused unrest among the nobility who now wish to grant the crown of Argenia to [ANI.monarch.GetName]."
