--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -106,3 +106,11 @@
  COLONIAL_thiara_ADJ:0 "Thiaran"
  COLONIAL_Root_Culture_GetName_blawenn:0 "[Root.GetAdjective] Blawenn"
  COLONIAL_Root_Culture_GetName_blawenn_ADJ:0 "[Root.GetAdjective] Blawennian"
+
+ colonial_ashmorland:0 "Colonial Ashmorland"
+ COLONIAL_sealatir:0 "Sealatir"
+ COLONIAL_sealatir_ADJ:0 "Sealatirian"
+ COLONIAL_ashmordland_custom:0 "Ashmorland"
+ COLONIAL_ashmordland_custom_ADJ:0 "Ashmorlish"
+ COLONIAL_Root_Culture_GetName_ashmorland:0 "[Root.GetAdjective] Ashmorland"
+ COLONIAL_Root_Culture_GetName_ashmorland_ADJ:0 "[Root.GetAdjective] Ashmorlish"
