--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1177,7 +1177,7 @@
  PROV1176:0 "Gogirdas"
  PROV1177:0 "Vazhakal"
  PROV1178:0 "Sikhraval"
- PROV1179:0 "1179"
+ PROV1179:0 "Apategan Sea"
  PROV1180:0 "Gridzelitba"
  PROV1181:0 "Mshivar"
  PROV1182:0 "1182"
@@ -1411,7 +1411,7 @@
  PROV1410:0 "Huitzachen"
  PROV1411:0 "Temamani"
  PROV1412:0 "Maccuauhuitl"
- PROV1413:0 "1413"
+ PROV1413:0 "Aalmeer"
  PROV1414:0 "Coztic"
  PROV1415:0 "Miztli"
  PROV1416:0 "Teocuitlaquixtiloyan"
@@ -1484,10 +1484,10 @@
  PROV1483:0 "Cuahuitl"
  PROV1484:0 "Tepeticpac"
  PROV1485:0 "Dušagan Sea"
- PROV1486:0 "1486"
+ PROV1486:0 "Mahinada"
  PROV1487:0 "Vazixani Coast"
  PROV1488:0 "Tlahcapa"
- PROV1489:0 "1489"
+ PROV1489:0 "Keyapare"
  PROV1490:0 "Achpeten"
  PROV1491:0 "Kuatanar"
  PROV1492:0 "Nokomuo"
@@ -1496,10 +1496,10 @@
  PROV1495:0 "Otochba"
  PROV1496:0 "Tidiro"
  PROV1497:0 "Laabkot"
- PROV1498:0 "1498"
+ PROV1498:0 "Ktukhawu"
  PROV1499:0 "1499"
- PROV1500:0 "1500"
- PROV1501:0 "1501"
+ PROV1500:0 "Kwachiquchucho"
+ PROV1501:0 "Knechawa"
  PROV1502:0 "Nooro"
  PROV1503:0 "Nguboka"
  PROV1504:0 "Pakubmak"
@@ -1584,62 +1584,62 @@
  PROV1583:0 "Guo"
  PROV1584:0 "Erabok"
  PROV1585:0 "Guitaka"
- PROV1586:0 "1586"
+ PROV1586:0 "Harichamur"
  PROV1587:0 "Eastern Lantan Sea"
- PROV1588:0 "1588"
- PROV1589:0 "1589"
- PROV1590:0 "1590"
- PROV1591:0 "1591"
- PROV1592:0 "1592"
+ PROV1588:0 "Buapuchee"
+ PROV1589:0 "Mauhketanni"
+ PROV1590:0 "Paqukpihuatheek"
+ PROV1591:0 "Kautenyeh"
+ PROV1592:0 "Bequaaun"
  PROV1593:0 "1593"
  PROV1594:0 "Northern Dalvian Waters"
- PROV1595:0 "1595"
+ PROV1595:0 "Warknechatheek"
  PROV1596:0 "Coast of Dies Nua"
- PROV1597:0 "1597"
- PROV1598:0 "1598"
- PROV1599:0 "1599"
+ PROV1597:0 "Chuthopeka"
+ PROV1598:0 "Yeskatak"
+ PROV1599:0 "Maupuhkatheek"
  PROV1600:0 "Thiccen Sea"
- PROV1601:0 "1601"
- PROV1602:0 "1602"
- PROV1603:0 "1603"
- PROV1604:0 "1604"
- PROV1605:0 "1605"
+ PROV1601:0 "Duanaku"
+ PROV1602:0 "Hipa"
+ PROV1603:0 "Wuqmatsawa"
+ PROV1604:0 "Piwatosaqa"
+ PROV1605:0 "Tema'toq"
  PROV1606:0 "Galeqan"
  PROV1607:0 "Eastern Thiccen Sea"
- PROV1608:0 "1608"
+ PROV1608:0 "Parno'q"
  PROV1609:0 "Western Lantan Sea"
- PROV1610:0 "1610"
- PROV1611:0 "1611"
+ PROV1610:0 "Pesquatch'toq"
+ PROV1611:0 "Jiwaqteq"
  PROV1612:0 "Mamshawoldian Coast"
  PROV1613:0 "1613"
  PROV1614:0 "1614"
  PROV1615:0 "1615"
- PROV1616:0 "1616"
- PROV1617:0 "1617"
- PROV1618:0 "1618"
+ PROV1616:0 "Serpeseta"
+ PROV1617:0 "Maquapiwaa"
+ PROV1618:0 "Teolacut"
  PROV1619:0 "Liemarlander Coast"
- PROV1620:0 "1620"
- PROV1621:0 "1621"
+ PROV1620:0 "Sagmpahi"
+ PROV1621:0 "Luksonoy"
  PROV1622:0 "Atlow Bay"
  PROV1623:0 "1623"
  PROV1624:0 "1624"
  PROV1625:0 "1625"
  PROV1626:0 "1626"
- PROV1627:0 "1627"
+ PROV1627:0 "Wahiwa"
  PROV1628:0 "1628"
  PROV1629:0 "1629"
  PROV1630:0 "1630"
- PROV1631:0 "1631"
- PROV1632:0 "1632"
+ PROV1631:0 "Tanyasetk"
+ PROV1632:0 "Asqomtaqan"
  PROV1633:0 "1633"
- PROV1634:0 "1634"
+ PROV1634:0 "Memgawat"
  PROV1635:0 "1635"
  PROV1636:0 "1636"
  PROV1637:0 "1637"
- PROV1638:0 "1638"
- PROV1639:0 "1639"
- PROV1640:0 "1640"
- PROV1641:0 "1641"
+ PROV1638:0 "Ulwatij"
+ PROV1639:0 "Saqpawaq"
+ PROV1640:0 "Panqetqa"
+ PROV1641:0 "Gipcha"
  PROV1642:0 "1642"
  PROV1643:0 "1643"
  PROV1644:0 "1644"
@@ -1654,14 +1654,14 @@
  PROV1653:0 "1653"
  PROV1654:0 "1654"
  PROV1655:0 "1655"
- PROV1656:0 "1656"
+ PROV1656:0 "Dalugsiwa"
  PROV1657:0 "1657"
  PROV1658:0 "1658"
  PROV1659:0 "1659"
  PROV1660:0 "1660"
- PROV1661:0 "1661"
+ PROV1661:0 "Kahilese"
  PROV1662:0 "1662"
- PROV1663:0 "1663"
+ PROV1663:0 "Papachisen"
  PROV1664:0 "1664"
  PROV1665:0 "Borveren"
  PROV1666:0 "Sitsewijk"
@@ -1709,7 +1709,7 @@
  PROV1708:0 "Akhalivan"
  PROV1709:0 "Davirat"
  PROV1710:0 "Dmainisi"
- PROV1711:0 "1711"
+ PROV1711:0 "Coast of Qudsala"
  PROV1712:0 "Dzvelikosh"
  PROV1713:0 "Tetrigor"
  PROV1714:0 "Bezaq"
@@ -1768,8 +1768,8 @@
  PROV1767:0 "1767"
  PROV1768:0 "1768"
  PROV1769:0 "1769"
- PROV1770:0 "1770"
- PROV1771:0 "Coast of Qudsala"
+ PROV1770:0 "Nahabepaya"
+ PROV1771:0 "1771"
  PROV1772:0 "1772"
  PROV1773:0 "1773"
  PROV1774:0 "1774"
@@ -1789,7 +1789,7 @@
  PROV1788:0 "1788"
  PROV1789:0 "1789"
  PROV1790:0 "Saramaran"
- PROV1791:0 "Novemesto"
+ PROV1791:0 "Aqamagew"
  PROV1792:0 "1792"
  PROV1793:0 "1793"
  PROV1794:0 "1794"
@@ -1884,8 +1884,8 @@
  PROV1883:0 "1883"
  PROV1884:0 "1884"
  PROV1885:0 "1885"
- PROV1886:0 "1886"
- PROV1887:0 "1887"
+ PROV1886:0 "Agohada"
+ PROV1887:0 "Hokitan"
  PROV1888:0 "1888"
  PROV1889:0 "1889"
  PROV1890:0 "1890"
@@ -2475,9 +2475,9 @@
  PROV2474:0 "2474"
  PROV2475:0 "2475"
  PROV2476:0 "2476"
- PROV2477:0 "2477"
- PROV2478:0 "2478"
- PROV2479:0 "2479"
+ PROV2477:0 "Puchpeseta"
+ PROV2478:0 "Minica"
+ PROV2479:0 "Serahetake"
  PROV2480:0 "2480"
  PROV2481:0 "2481"
  PROV2482:0 "2482"
