--- a/localisation/TD_01_flavour_camaria_l_english.yml
+++ b/localisation/TD_01_flavour_camaria_l_english.yml
@@ -18,6 +18,9 @@
  cancel_compagne_tooltip:0 "Leave the league lead by [From.GetName]"
  cancel_compagne_desc:0 "Leaving the League will reduce opinion of all League members (including the leader) of us by §R50§!."
  
+ compagne_modifier:0 "Compagne di Guerra"
+ compagne_overlord_modifier:0 "Compagne di Guerra"
+ 
 
  group_camarian_ideas:0 "Camarian Minor Ideas"
  group_camarian_ideas_start:0 "Camarian Minor Traditions"
