--- a/localisation/institutions_l_english.yml
+++ b/localisation/institutions_l_english.yml
@@ -84,10 +84,13 @@
  tooltip_development_20_capital:0 "European 20 development capital"
  tooltip_development_5_post_1500:0 "European 5 development province - post 1500"
  tooltip_flanders_tuscany_venetia:0 "Province in the Flanders, Tuscany or Venetia Area"
+ tooltip_specific_culture_renaissance:0 "Province is either Vementi, Ostemer, Novoregnian or Vetican culture"
  tooltip_dip_tech15_capital:0 "Capital of country with DIP Tech 15"
  tooltip_owner_protestant:2 "Not Trade Company & State Religion is Protestant, Anglican, or Reformed"
+ tooltip_owner_liemarian:0 "Not Trade Company & State Religion is Agellidian, Wirosepan or Liemarian" 
  tooltip_owner_reformed:1 "Not Trade Company & State Religion is Reformed"
  tooltip_province_protestant:1 "Province is Protestant or Reformed"
+ tooltip_province_liemarian:0 "Province is Wirosepan, Agellidian or Liemarian"
  tooltip_province_protestant_RB:0 "Province is Protestant, Anglican or Reformed"
  tooltip_province_reformed:0 "Province is Reformed"
  tooltip_has_seat_in_parliament:0 "Province has seat in Parliament"
