province names + colonial nation names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1434,7 +1434,7 @@
  PROV1433:0 "Xochitotol"
  PROV1434:0 "Cuicanitototl"
  PROV1435:0 "Cuicatiliztli"
- PROV1436:0 "1436"
+ PROV1436:0 "Southern Aalmeer"
  PROV1437:0 "Choquiliztli"
  PROV1438:0 "Cuauhchayahuallo"
  PROV1439:0 "Tepozhuitzoctli"
@@ -1455,8 +1455,8 @@
  PROV1454:0 "Xuxuchitla"
  PROV1455:0 "Achtoteopan"
  PROV1456:0 "Tepexichan"
- PROV1457:0 "1457"
- PROV1458:0 "1458"
+ PROV1457:0 "Northern Aalmeer"
+ PROV1458:0 "Western Taqari Current"
  PROV1459:0 "Chapukar"
  PROV1460:0 "Ichcatilmatli"
  PROV1461:0 "Icuitl"
@@ -1542,7 +1542,7 @@
  PROV1541:0 "Ixkab'uh"
  PROV1542:0 "Mapahuaca"
  PROV1543:0 "Sutza'mal"
- PROV1544:0 "1544"
+ PROV1544:0 "Northern Abadian Rift"
  PROV1545:0 "Fakabchen"
  PROV1546:0 "Keyepa"
  PROV1547:0 "Marixik"
@@ -1572,7 +1572,7 @@
  PROV1571:0 "Tsichinila"
  PROV1572:0 "Southern Dalvian Waters"
  PROV1573:0 "Central Arctic Sea"
- PROV1574:0 "Mushorq'aa"
+ PROV1574:0 "Quacharna"
  PROV1575:0 "Kweltana"
  PROV1576:0 "Niinipe"
  PROV1577:0 "Yeniheel"
@@ -1591,7 +1591,7 @@
  PROV1590:0 "Paqukpihuatheek"
  PROV1591:0 "Kautenyeh"
  PROV1592:0 "Bequaaun"
- PROV1593:0 "1593"
+ PROV1593:0 "Aksumohcha"
  PROV1594:0 "Northern Dalvian Waters"
  PROV1595:0 "Warknechatheek"
  PROV1596:0 "Coast of Dies Nua"
@@ -1611,9 +1611,9 @@
  PROV1610:0 "Pesquatch'toq"
  PROV1611:0 "Jiwaqteq"
  PROV1612:0 "Mamshawoldian Coast"
- PROV1613:0 "1613"
- PROV1614:0 "1614"
- PROV1615:0 "1615"
+ PROV1613:0 "Nechovokhat"
+ PROV1614:0 "Hakepan Range"
+ PROV1615:0 "Yayahi Range"
  PROV1616:0 "Serpeseta"
  PROV1617:0 "Maquapiwaa"
  PROV1618:0 "Teolacut"
@@ -1622,12 +1622,12 @@
  PROV1621:0 "Luksonoy"
  PROV1622:0 "Atlow Bay"
  PROV1623:0 "1623"
- PROV1624:0 "1624"
+ PROV1624:0 "Meskenakve"
  PROV1625:0 "1625"
- PROV1626:0 "1626"
+ PROV1626:0 "Oltowake"
  PROV1627:0 "Wahiwa"
- PROV1628:0 "1628"
- PROV1629:0 "1629"
+ PROV1628:0 "Colocktaw"
+ PROV1629:0 "Nakevsekat"
  PROV1630:0 "1630"
  PROV1631:0 "Tanyasetk"
  PROV1632:0 "Asqomtaqan"
@@ -1635,22 +1635,22 @@
  PROV1634:0 "Memgawat"
  PROV1635:0 "1635"
  PROV1636:0 "1636"
- PROV1637:0 "1637"
+ PROV1637:0 "Tuwaheckv"
  PROV1638:0 "Ulwatij"
  PROV1639:0 "Saqpawaq"
  PROV1640:0 "Panqetqa"
  PROV1641:0 "Gipcha"
  PROV1642:0 "1642"
  PROV1643:0 "1643"
- PROV1644:0 "1644"
- PROV1645:0 "1645"
- PROV1646:0 "1646"
- PROV1647:0 "1647"
- PROV1648:0 "1648"
- PROV1649:0 "1649"
- PROV1650:0 "1650"
+ PROV1644:0 "Nackavoche"
+ PROV1645:0 "Sentveka"
+ PROV1646:0 "Sobohali Range"
+ PROV1647:0 "Hiyolockvapul"
+ PROV1648:0 "Esuenka"
+ PROV1649:0 "Kuatoleme"
+ PROV1650:0 "Emehick"
  PROV1651:0 "1651"
- PROV1652:0 "1652"
+ PROV1652:0 "Hefkalopi"
  PROV1653:0 "1653"
  PROV1654:0 "1654"
  PROV1655:0 "1655"
@@ -1864,7 +1864,7 @@
  PROV1863:0 "1863"
  PROV1864:0 "1864"
  PROV1865:0 "1865"
- PROV1866:0 "1866"
+ PROV1866:0 "Horkopasko"
  PROV1867:0 "1867"
  PROV1868:0 "1868"
  PROV1869:0 "1869"
@@ -1872,10 +1872,10 @@
  PROV1871:0 "1871"
  PROV1872:0 "1872"
  PROV1873:0 "1873"
- PROV1874:0 "1874"
+ PROV1874:0 "Husehe"
  PROV1875:0 "1875"
- PROV1876:0 "1876"
- PROV1877:0 "1877"
+ PROV1876:0 "Yesateu"
+ PROV1877:0 "Alikaske"
  PROV1878:0 "Jarithan Coast"
  PROV1879:0 "1879"
  PROV1880:0 "1880"
@@ -1889,7 +1889,7 @@
  PROV1888:0 "1888"
  PROV1889:0 "1889"
  PROV1890:0 "1890"
- PROV1891:0 "1891"
+ PROV1891:0 "Nufekha"
  PROV1892:0 "1892"
  PROV1893:0 "1893"
  PROV1894:0 "1894"
@@ -2876,7 +2876,7 @@
  PROV2875:0 "2875"
  PROV2876:0 "2876"
  PROV2877:0 "2877"
- PROV2878:0 "2878"
+ PROV2878:0 "Tukveha"
  PROV2879:0 "2879"
  PROV2880:0 "2880"
  PROV2881:0 "2881"
@@ -2903,7 +2903,7 @@
  PROV2902:0 "2902"
  PROV2903:0 "2903"
  PROV2904:0 "2904"
- PROV2905:0 "2905"
+ PROV2905:0 "Oketa"
  PROV2906:0 "2906"
  PROV2907:0 "2907"
  PROV2908:0 "2908"
