--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
  PROV1:0 "Geniburgh"
  PROV2:0 "Linamaco"
- PROV3:0 "Prov3" #!
- PROV4:0 "Prov4"  #!
+ PROV3:0 "3"
+ PROV4:0 "4"
  PROV5:0 "Ehrenstadt"
  PROV6:0 "Kerborn"
  PROV7:0 "Njuhccamavran Bay"
@@ -1239,7 +1239,7 @@
  PROV1238:0 "Abunae"
  PROV1239:0 "Hyrcedos"
  PROV1240:0 "Pellos"
- PROV1241:0 "1241" #!
+ PROV1241:0 "1241"
  PROV1242:0 "Momaaki Sea"
  PROV1243:0 "Cleideos"
  PROV1244:0 "Synoa"
@@ -1255,7 +1255,7 @@
  PROV1254:0 "Guzrat"
  PROV1255:0 "Maravit"
  PROV1256:0 "Teimutsike"
- PROV1257:0 "1257" #!
+ PROV1257:0 "1257"
  PROV1258:0 "Dasarali"
  PROV1259:0 "Dasarali"
  PROV1260:0 "Malagosans"
@@ -1524,7 +1524,7 @@
  PROV1523:0 "Quentli"
  PROV1524:0 "1524"
  PROV1525:0 "Neolololli"
- PROV1526:0 "1526" #!
+ PROV1526:0 "1526"
  PROV1527:0 "Xochicuauhtla"
  PROV1528:0 "Tlalmanqui"
  PROV1529:0 "Ku'lajax"
@@ -1715,8 +1715,8 @@
  PROV1714:0 "Bezaq"
  PROV1715:0 "Abujman"
  PROV1716:0 "Akhakal" 
- PROV1717:0 "1717" #!
- PROV1718:0 "1718" #!
+ PROV1717:0 "1717"
+ PROV1718:0 "1718"
  PROV1719:0 "Coast of Wahida"
  PROV1720:0 "Karisavela"
  PROV1721:0 "Karwazi"
@@ -2463,7 +2463,7 @@
  PROV2462:0 "Pinita"
  PROV2463:0 "Huena"
  PROV2464:0 "Ya"
- PROV2465:0 "2465" #!
+ PROV2465:0 "2465"
  PROV2466:0 "Yamcha"
  PROV2467:0 "2467"
  PROV2468:0 "2468"
