dorchean fisheries estate privilege

--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -70,3 +70,11 @@
  argenia.5.a:0 "Let's Set it up."
  argenia.5.b:0 "Maybe there's more land west of Lanta?"
  argenia.5.c:0 "Why? I don't even like whales! Or seals for that matter..."
+
+ 
+ estate_burghers_dorchean_fisheries:0 "Dorchean Fisheries"
+ estate_burghers_dorchean_fisheries_desc:0 "Mixing warm and cold currents make the seas around the dorchean isels hold large populations of variety fishes making coastal settlements much more prosperous than those inland."
+ estate_burghers_dorchean_fisheries_gt:0 "Adds development cost and goods produced modifiers from all coastal provinces in Dorchean Isles Region."
+ estate_burghers_dorchean_fisheries_rt:0 "Removes development cost and goods produced modifiers from all coastal provinces in Dorchean Isles Region."
+ estate_burghers_dorchean_fisheries_modifier:0 "Dorchean Fisheries"
+ desc_estate_burghers_dorchean_fisheries_modifier:0 "Mixing warm and cold currents make the seas around the dorchean isels hold large populations of variety fishes making coastal settlements much more prosperous than those inland."
