--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -74,7 +74,7 @@
  
  estate_burghers_dorchean_fisheries:0 "Dorchean Fisheries"
  estate_burghers_dorchean_fisheries_desc:0 "Mixing warm and cold currents make the seas around the dorchean isels hold large populations of variety fishes making coastal settlements much more prosperous than those inland."
- estate_burghers_dorchean_fisheries_gt:0 "Adds §YDevelopment Cost§! and §YLocal Goods Produced modifiers§! to all coastal provinces in §YDorchean Isles§!."
- estate_burghers_dorchean_fisheries_rt:0 "Removes §YDevelopment Cost§! and §YLocal Goods Produced modifiers§! from all coastal provinces in §YDorchean Isles§!."
+ estate_burghers_dorchean_fisheries_gt:0 "Reduces §YLocal Development Cost§! and increases §YLocal Goods Produced§! in all coastal provinces in §YDorchean Isles§!."
+ estate_burghers_dorchean_fisheries_rt:0 "Removes reduced §YLocal Development Cost§! and increased §YLocal Goods Produced§! from all coastal provinces in §YDorchean Isles§!."
  estate_burghers_dorchean_fisheries_modifier:0 "Dorchean Fisheries"
  desc_estate_burghers_dorchean_fisheries_modifier:0 "Mixing warm and cold currents make the seas around the dorchean isels hold large populations of variety fishes making coastal settlements much more prosperous than those inland."
