--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -557,3 +557,27 @@
  lower_sapethaka_area:0 "Lower Sapethaka"
  mapteqa_area:0 "Mapteqa"
  cekmarel_area:0 "Cekmarel"
+
+ escorpiana_area:0 "Escorpiana"
+ rasgadia_area:0 "Rasgadia"
+ west_escorpiana_area:0 "West Escorpiana"
+ taawao_area:0 "Taawao"
+ upper_hirahachir_area:0 "Upper Hirahachir"
+ batwekatl_area:0 "Batwekatl"
+ avikwamee_area:0 "Avikwamee"
+ piwastaqa_area:0 "Piwastaqa"
+ mentey_area:0 "Mentey"
+ panaku_area:0 "Panaku"
+ upper_delargia_area:0 "Upper Delargia"
+ myapa_area:0 "Myapa"
+ apaseland_area:0 "Apaseland"
+ maqualanche_area:0 "Maqualanche"
+ hermannwald_area:0 "Hermannwald"
+ upper_neumark_area:0 "Upper Neumark"
+ neumark_area:0 "Neumark"
+ east_sigericia_area:0 "East Sigerica"
+ west_sigericia_area:0 "West Sigerica"
+ northern_tarhia_area:0 "Northern Tarhia"
+ micelacus_area:0 "Micelacus"
+ south_coilhuaidh_area:0 "South Coilhuaidh"
+ north_coilhuaidh_area:0 "North Coilhuaidh"
