--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1656,7 +1656,7 @@
  PROV1655:0 "1655"
  PROV1656:0 "Dalugsiwa"
  PROV1657:0 "1657"
- PROV1658:0 "1658"
+ PROV1658:0 "Kosara"
  PROV1659:0 "1659"
  PROV1660:0 "1660"
  PROV1661:0 "Kahilese"
@@ -1763,14 +1763,14 @@
  PROV1762:0 "1762"
  PROV1763:0 "1763"
  PROV1764:0 "1764"
- PROV1765:0 "1765"
- PROV1766:0 "1766"
- PROV1767:0 "1767"
- PROV1768:0 "1768"
- PROV1769:0 "1769"
+ PROV1765:0 "Kawe"
+ PROV1766:0 "Miwanahe"
+ PROV1767:0 "Hiratesa"
+ PROV1768:0 "Hinicha"
+ PROV1769:0 "Hikiritaki"
  PROV1770:0 "Nahabepaya"
- PROV1771:0 "1771"
- PROV1772:0 "1772"
+ PROV1771:0 "Nestekhara"
+ PROV1772:0 "Hirahirawa"
  PROV1773:0 "1773"
  PROV1774:0 "1774"
  PROV1775:0 "1775"
@@ -1886,8 +1886,8 @@
  PROV1885:0 "1885"
  PROV1886:0 "Agohada"
  PROV1887:0 "Hokitan"
- PROV1888:0 "1888"
- PROV1889:0 "1889"
+ PROV1888:0 "Niseyaki"
+ PROV1889:0 "Tactawick"
  PROV1890:0 "1890"
  PROV1891:0 "Nufekha"
  PROV1892:0 "1892"
@@ -2469,21 +2469,21 @@
  PROV2468:0 "2468"
  PROV2469:0 "Quincha"
  PROV2470:0 "Merica"
- PROV2471:0 "2471"
+ PROV2471:0 "Tahaki"
  PROV2472:0 "2472"
  PROV2473:0 "2473"
  PROV2474:0 "2474"
- PROV2475:0 "2475"
- PROV2476:0 "2476"
+ PROV2475:0 "Kicahti"
+ PROV2476:0 "Puhakche"
  PROV2477:0 "Puchpeseta"
  PROV2478:0 "Minica"
  PROV2479:0 "Serahetake"
- PROV2480:0 "2480"
- PROV2481:0 "2481"
- PROV2482:0 "2482"
- PROV2483:0 "2483"
- PROV2484:0 "2484"
- PROV2485:0 "2485"
+ PROV2480:0 "Hacirato"
+ PROV2481:0 "Chias"
+ PROV2482:0 "Kewatac"
+ PROV2483:0 "Tirikha"
+ PROV2484:0 "Hiraca"
+ PROV2485:0 "Awachi"
  PROV2486:0 "2486"
  PROV2487:0 "2487"
  PROV2488:0 "2488"
@@ -2522,11 +2522,11 @@
  PROV2521:0 "2521"
  PROV2522:0 "2522"
  PROV2523:0 "2523"
- PROV2524:0 "2524"
- PROV2525:0 "2525"
- PROV2526:0 "2526"
- PROV2527:0 "2527"
- PROV2528:0 "2528"
+ PROV2524:0 "Yakhari"
+ PROV2525:0 "Wichthara"
+ PROV2526:0 "Ekhata"
+ PROV2527:0 "Yahiwika"
+ PROV2528:0 "Kwachissa"
  PROV2529:0 "2529"
  PROV2530:0 "2530"
  PROV2531:0 "2531"
