Mammeria prov names
too much g's and y's

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1020,7 +1020,7 @@
  PROV1019:0 "Jääsalmiin"
  PROV1020:0 "Pataravel"
  PROV1021:0 "Sazgharanodaris"
- PROV1022:0 "1022"
+ PROV1022:0 "Pagmelik"
  PROV1023:0 "Amnodos"
  PROV1024:0 "Fawud"
  PROV1025:0 "Meros"
@@ -1149,7 +1149,7 @@
  PROV1148:0 "1148"
  PROV1149:0 "1149"
  PROV1150:0 "1150"
- PROV1151:0 "1151"
+ PROV1151:0 "Janlhary"
  PROV1152:0 "Qaravakh"
  PROV1153:0 "Saint Renard's Bay"
  PROV1154:0 "Qarasam Sea"
@@ -1180,10 +1180,10 @@
  PROV1179:0 "Apategan Sea"
  PROV1180:0 "Gridzelitba"
  PROV1181:0 "Mshivar"
- PROV1182:0 "1182"
- PROV1183:0 "1183"
- PROV1184:0 "1184"
- PROV1185:0 "1185"
+ PROV1182:0 "Bakayyl"
+ PROV1183:0 "Gyakir"
+ PROV1184:0 "Yaglyz"
+ PROV1185:0 "Eltym"
  PROV1186:0 "1186"
  PROV1187:0 "1187"
  PROV1188:0 "1188"
@@ -1734,33 +1734,33 @@
  PROV1733:0 "Gazapkhar"
  PROV1734:0 "Dzegav"
  PROV1735:0 "Makvar"
- PROV1736:0 "1736"
+ PROV1736:0 "Gycaly"
  PROV1737:0 "1737"
- PROV1738:0 "1738"
- PROV1739:0 "1739"
- PROV1740:0 "1740"
- PROV1741:0 "1741"
+ PROV1738:0 "Holsyak"
+ PROV1739:0 "Osmalig"
+ PROV1740:0 "Dysameg"
+ PROV1741:0 "Mukyyles"
  PROV1742:0 "Radoriasan Bay"
  PROV1743:0 "Secenan Coast"
- PROV1744:0 "1744"
- PROV1745:0 "1745"
- PROV1746:0 "1746"
+ PROV1744:0 "Cugyer"
+ PROV1745:0 "Sygyary"
+ PROV1746:0 "Garayn"
  PROV1747:0 "Cadeilhasi Coast"
- PROV1748:0 "1748"
- PROV1749:0 "1749"
- PROV1750:0 "1750"
- PROV1751:0 "1751"
+ PROV1748:0 "Gyruzygety"
+ PROV1749:0 "Gyzyler"
+ PROV1750:0 "Gkylyl"
+ PROV1751:0 "Kemacyli"
  PROV1752:0 "Maraqitan Coast"
- PROV1753:0 "1753"
+ PROV1753:0 "Kypytar"
  PROV1754:0 "Outer Qarbali Sea"
  PROV1755:0 "1755"
  PROV1756:0 "1756"
- PROV1757:0 "1757"
- PROV1758:0 "1758"
- PROV1759:0 "1759"
- PROV1760:0 "1760"
- PROV1761:0 "1761"
- PROV1762:0 "1762"
+ PROV1757:0 "Dirjasy"
+ PROV1758:0 "Myrejett"
+ PROV1759:0 "Uruncyr"
+ PROV1760:0 "Metsykay"
+ PROV1761:0 "Dorynaatyh"
+ PROV1762:0 "Tarilyk"
  PROV1763:0 "1763"
  PROV1764:0 "1764"
  PROV1765:0 "Kawe"
@@ -2687,11 +2687,11 @@
  PROV2686:0 "2686"
  PROV2687:0 "2687"
  PROV2688:0 "2688"
- PROV2689:0 "2689"
- PROV2690:0 "2690"
- PROV2691:0 "2691"
+ PROV2689:0 "Hanyar"
+ PROV2690:0 "Sryhla"
+ PROV2691:0 "Lakmag"
  PROV2692:0 "2692"
- PROV2693:0 "2693"
+ PROV2693:0 "Gavalur"
  PROV2694:0 "2694"
  PROV2695:0 "2695"
  PROV2696:0 "2696"
@@ -2732,9 +2732,9 @@
  PROV2731:0 "2731"
  PROV2732:0 "2732"
  PROV2733:0 "2733"
- PROV2734:0 "2734"
- PROV2735:0 "2735"
- PROV2736:0 "2736"
+ PROV2734:0 "Demidak"
+ PROV2735:0 "Yyrtylit"
+ PROV2736:0 "Ammag"
  PROV2737:0 "2737"
  PROV2738:0 "2738"
  PROV2739:0 "2739"
