--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -1020,7 +1020,7 @@
  PROV_ADJ1019:0 "1019"
  PROV_ADJ1020:0 "1020"
  PROV_ADJ1021:0 "1021"
- PROV_ADJ1022:0 "1022"
+ PROV_ADJ1022:0 "Pagmelik"
  PROV_ADJ1023:0 "1023"
  PROV_ADJ1024:0 "Fawud"
  PROV_ADJ1025:0 "1025"
@@ -1149,7 +1149,7 @@
  PROV_ADJ1148:0 "1148"
  PROV_ADJ1149:0 "1149"
  PROV_ADJ1150:0 "1150"
- PROV_ADJ1151:0 "1151"
+ PROV_ADJ1151:0 "Janlhary"
  PROV_ADJ1152:0 "1152"
  PROV_ADJ1153:0 "1153"
  PROV_ADJ1154:0 "Qarasam Sea"
@@ -1180,10 +1180,10 @@
  PROV_ADJ1179:0 "1179"
  PROV_ADJ1180:0 "1180"
  PROV_ADJ1181:0 "1181"
- PROV_ADJ1182:0 "1182"
- PROV_ADJ1183:0 "1183"
- PROV_ADJ1184:0 "1184"
- PROV_ADJ1185:0 "1185"
+ PROV_ADJ1182:0 "Bakayyl"
+ PROV_ADJ1183:0 "Gyakir"
+ PROV_ADJ1184:0 "Yaglyz"
+ PROV_ADJ1185:0 "Eltym"
  PROV_ADJ1186:0 "1186"
  PROV_ADJ1187:0 "1187"
  PROV_ADJ1188:0 "1188"
@@ -1734,33 +1734,33 @@
  PROV_ADJ1733:0 "1733"
  PROV_ADJ1734:0 "1734"
  PROV_ADJ1735:0 "1735"
- PROV_ADJ1736:0 "1736"
+ PROV_ADJ1736:0 "Gycaly"
  PROV_ADJ1737:0 "1737"
- PROV_ADJ1738:0 "1738"
- PROV_ADJ1739:0 "1739"
- PROV_ADJ1740:0 "1740"
- PROV_ADJ1741:0 "1741"
+ PROV_ADJ1738:0 "Holsyak"
+ PROV_ADJ1739:0 "Osmalig"
+ PROV_ADJ1740:0 "Dysameg"
+ PROV_ADJ1741:0 "Mukyyles"
  PROV_ADJ1742:0 "1742"
  PROV_ADJ1743:0 "1743"
- PROV_ADJ1744:0 "1744"
- PROV_ADJ1745:0 "1745"
- PROV_ADJ1746:0 "1746"
+ PROV_ADJ1744:0 "Cugyer"
+ PROV_ADJ1745:0 "Sygyary"
+ PROV_ADJ1746:0 "Garayn"
  PROV_ADJ1747:0 "1747"
- PROV_ADJ1748:0 "1748"
- PROV_ADJ1749:0 "1749"
- PROV_ADJ1750:0 "1750"
- PROV_ADJ1751:0 "1751"
+ PROV_ADJ1748:0 "Gyruzygety"
+ PROV_ADJ1749:0 "Gyzyler"
+ PROV_ADJ1750:0 "Gkylyl"
+ PROV_ADJ1751:0 "Kemacyli"
  PROV_ADJ1752:0 "1752"
- PROV_ADJ1753:0 "1753"
+ PROV_ADJ1753:0 "Kypytar"
  PROV_ADJ1754:0 "1754"
  PROV_ADJ1755:0 "1755"
  PROV_ADJ1756:0 "1756"
- PROV_ADJ1757:0 "1757"
- PROV_ADJ1758:0 "1758"
- PROV_ADJ1759:0 "1759"
- PROV_ADJ1760:0 "1760"
- PROV_ADJ1761:0 "1761"
- PROV_ADJ1762:0 "1762"
+ PROV_ADJ1757:0 "Dirjasy"
+ PROV_ADJ1758:0 "Myrejett"
+ PROV_ADJ1759:0 "Uruncyr"
+ PROV_ADJ1760:0 "Metsykay"
+ PROV_ADJ1761:0 "Dorynaatyh"
+ PROV_ADJ1762:0 "Tarilyk"
  PROV_ADJ1763:0 "1763"
  PROV_ADJ1764:0 "1764"
  PROV_ADJ1765:0 "1765"
@@ -2687,11 +2687,11 @@
  PROV_ADJ2686:0 "2686"
  PROV_ADJ2687:0 "2687"
  PROV_ADJ2688:0 "2688"
- PROV_ADJ2689:0 "2689"
- PROV_ADJ2690:0 "2690"
- PROV_ADJ2691:0 "2691"
+ PROV_ADJ2689:0 "Hanyar"
+ PROV_ADJ2690:0 "Sryhla"
+ PROV_ADJ2691:0 "Lakmag"
  PROV_ADJ2692:0 "2692"
- PROV_ADJ2693:0 "2693"
+ PROV_ADJ2693:0 "Gavalur"
  PROV_ADJ2694:0 "2694"
  PROV_ADJ2695:0 "2695"
  PROV_ADJ2696:0 "2696"
@@ -2732,9 +2732,9 @@
  PROV_ADJ2731:0 "2731"
  PROV_ADJ2732:0 "2732"
  PROV_ADJ2733:0 "2733"
- PROV_ADJ2734:0 "2734"
- PROV_ADJ2735:0 "2735"
- PROV_ADJ2736:0 "2736"
+ PROV_ADJ2734:0 "Demidak"
+ PROV_ADJ2735:0 "Yyrtylit"
+ PROV_ADJ2736:0 "Ammag"
  PROV_ADJ2737:0 "2737"
  PROV_ADJ2738:0 "2738"
  PROV_ADJ2739:0 "2739"
