province goods changes + gisian resettlement

--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -29,3 +29,10 @@
  federation_trust_in_the_khan:0 "Trust in the Khan"
  federation_horse_breeding:0 "Horse Breeding"
  federation_shared_wisdom:0 "Shared Wisdom"
+
+ estate_burghers_gisian_resettlement:0 "Gisian Resettlement"
+ estate_burghers_gisian_resettlement_desc:0 "Our slow reclamation of once great Zakarturi empire brought with it many new settlers ready to restore farming capabilities of these lands."
+ estate_burghers_gisian_resettlement_gt:0 "Gisian steppe provinces will get §G-25%§! §YLocal Development Cost§!."
+ estate_burghers_gisian_resettlement_rt:0 "Gisian steppe provinces will lose §G-25%§! §YLocal Development Cost§! reduction."
+ estate_burghers_gisian_resettlement_modifier:0 "Gisian Resettlement"
+ desc_estate_burghers_gisian_resettlement_modifier:0 "Our slow reclamation of once great Zakarturi empire brought with it many new settlers ready to restore farming capabilities of these lands."
