--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -1248,7 +1248,7 @@
  HAS_NO_TRADER_IS_NODE:0 "§Y$WHO$§! do NOT have a merchant in §Y$NAME$§!\n"
  HAS_TRADER_IS_NODE:1 "§Y$WHO$§! has a Merchant in §Y$NAME$§!\n"
  ACTUALPOWER_MODIFIER:0 "Modified by $VAL$.\n"
- RELIGION_CHANGE:1 "§Y$NEW$§W becomes the new state-religion of $WHO$.\nThis will also apply to our ruler and possible heirs.\n"
+ RELIGION_CHANGE:2 "§Y$NEW$§W becomes the new state-religion of $WHO$.\nThis will also apply to their ruler and possible heirs.\n"
  JOIN_LEAGUE:0 "$WHO$ joins the §Y$RELIGION$ League§!.\n"
  LEAVE_LEAGUE:0 "$WHO$ leaves the §Y$RELIGION$ League§!.\n"
  WEXTITLE:0 "War Exhaustion"
@@ -4645,8 +4645,8 @@
  STATISTS_IN_POWER:1 "$NAME$ in Power"
  MONARCHISTS_NOT_IN_POWER:0 "$NAME$ NOT in power"
  MONARCHISTS_IN_POWER:0 "$NAME$ in Power"
- STATIST_VS_MONARCHISTS_LESS_THAN:0 "$STATISTS$ vs $MONARCHISTS$ less than $VAL$"
- STATIST_VS_MONARCHISTS_AT_LEAST:0 "$STATISTS$ vs $MONARCHISTS$ at least $VAL$"
+ STATIST_VS_MONARCHISTS_LESS_THAN:1 "$STATISTS$ vs $MONARCHISTS$ is less than $VAL|0Y$"
+ STATIST_VS_MONARCHISTS_AT_LEAST:1 "$STATISTS$ vs $MONARCHISTS$ is at least $VAL|0Y$"
  STRENG_STATISTS_EFFECT:1 "Strengthen $NAME$ by $VAL|Y%$"
  STRENG_MONARCHISTS_EFFECT:0 "Strengthen $NAME$ by $VAL|Y%$"
  STATISTS_IRO:1 "$NAME|Y$\n"
@@ -4718,7 +4718,7 @@
  IS_NOT_CURRYING_FAVORS:0 "But we are not currying favors with $WHO$."
  CURRYFAVORSDESC:0 "Curry favours with them will increase our favors over time."
  CANCEL_CURRYFAVORSDESC:0 "By no longer attempting to curry favours, we may slowly lose our gains."
- CURRY_FAVORS_DESC:0 "Do you wish to send our diplomat to curry favvors with §Y$COUNTRY$§W?\nEach month the diplomat will, depending heavily on our diplomatic reputation, increase the amount of favors they owe us!"
+ CURRY_FAVORS_DESC:0 "Do you wish to send our diplomat to curry favors with §Y$COUNTRY$§W?\nEach month the diplomat will, depending heavily on our diplomatic reputation, increase the amount of favors they owe us!"
  CANCEL_CURRY_FAVORS_DESC:0 "Do you wish to recall our diplomat who is currying favors with §Y$COUNTRY$§W?\nWhen he stops working, the favors they owe us may slowly decline."
  CURRYFAVORS:0 "Curry Favors"
  CURRYFAVORSTITLE:0 "Curry Favors"
