--- a/localisation/aow_l_english.yml
+++ b/localisation/aow_l_english.yml
@@ -474,6 +474,7 @@
  NO_TRUCE_COALITION:0 "You cannot form a coalition against a nation with which you have a truce."
  ADJ_C_SPEED:0 "Adjacent to Reformation Center: $VAL$\n"
  C_SP_MISSIONARY_ZEAL:0 "$WHO$ Heretic Missionary Strength: $VAL$\n"
+ C_SP_MISSIONARY_ZEAL_HEATHEN:0 "$WHO$ Heathen Missionary Strength: $VAL$\n"
  C_SP_DEVELOPMENT:0 "Development level of $PROVINCE$: $VAL$\n"
  C_SP_HER_TOLERANCE:0 "Heretic Tolerance: $VAL$\n"
  CLIENT_SINCE:0 "A client under §Y$OTHER$§W since §Y$SINCE$§W"
