--- a/localisation/emperor_l_english.yml
+++ b/localisation/emperor_l_english.yml
@@ -532,7 +532,7 @@
  alert_can_embrace_revolution_instant:0 "§YWe can embrace the Revolution§!"
  alert_can_embrace_revolution_delayed:0 "Revolutionary ideas have spread enough in our country that our citizens are ready to take up arms against kings and tyrants. We can embrace the Revolution now!"
  SPREAD_REVOLUTION_TREATY_NAME:0 "Spread the Revolution"
- SPREAD_REVOLUTION_TREATY_DESC:0 "Revolutionary ideas will spread to all $GIVER_ADJECTIVE|Y$ provinces in $CONTINENT|Y$. $TAKER|Y$ will gain $POWER|G$ of each monarch power and $GIVER|Y$ will lose $POWER|R$ of each monarch power."
+ SPREAD_REVOLUTION_TREATY_DESC:1 "Revolutionary ideas will spread to all $GIVER_ADJECTIVE|Y$ provinces. $TAKER|Y$ will gain $POWER|G$ of each monarch power and $GIVER|Y$ will lose $POWER|R$ of each monarch power."
  PEACE_OPTION_ONLY_REV_TARGET:1 "Only The Home of the Revolution, the Revolutionary Target can demand this peace option. Only they can spread the true revolution!"
  PEACE_OPTION_REQUIRES_PROVINCES_TO_SPREAD:0 "There is no province left to which the Revolution can be spread to."
  spread_revolution_to_enemy:0 "Spread the revolution to $TARGET$"
