--- a/localisation/nw_l_english.yml
+++ b/localisation/nw_l_english.yml
@@ -146,8 +146,8 @@
  blockade_ports_desc:0 "Your goal is to stop your enemies trade by blocking as many ports as possible."
  HAVE_HIGHER_LIBERTY_DESIRE_THEN:0 "Liberty Desire at least §Y$VAL$%§!"
  HAVE_LOWER_LIBERTY_DESIRE_THEN:0 "Liberty Desire less than §Y$VAL$%§!"
- IS_NOT_IN_THE_COLONIAL_REGION:0 "Is NOT in the colonial region "
- IS_IN_COLONIAL_REGION:0 "Is in the colonial region "
+ IS_NOT_IN_THE_COLONIAL_REGION:0 "is NOT in the colonial region"
+ IS_IN_COLONIAL_REGION:0 "is in the colonial region"
  AT_LEAST_ONE_PROVINCE_IN_COLONIAL_REGION:0 "At least one province in the $REGION$ colonial region"
  NOT_ONE_PROVINCE_IN_COLONIAL_REGION:0 "No provinces in the $REGION$ colonial region"
  ALL_PROVINCES_IN_COLONIAL_REGION:0 "All provinces in the $REGION$ colonial region"
