--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -2325,7 +2325,7 @@
  SM_WATER:0 "Advanced Water"
  hungarian_hussarDESCR:0 "An exuberant Hungarian light cavalry unit renowned throughout Europe for its high discipline and skill."
  CREATE_NATIVE:0 "$SIZE$ tribe(s) of hostile natives will appear in $WHERE$.\n"
- CHANGE_SIEGE:0 "The $WHO$ in the siege in $WHERE$ will get $SIZE$ penalties."
+ CHANGE_SIEGE:1 "The $WHO$ in the siege in $WHERE$ will get $SIZE$ penalties.\n"
  SIEGE_DEFENDERS:0 "defenders"
  SIEGE_ATTACKERS:0 "attackers"
  SIEGE_MINOR:0 "minor"
@@ -5185,8 +5185,8 @@
  LOCAL_DEFENSIVENESS:0 "Local Defensiveness"
  BASE_TAX_LESS_THAN:0 "Base Tax less than"
  BASE_TAX_MORE_THAN:0 "Base Tax at least"
- PROVINCE_TRADE_POWER_LESS_THAN:0 "Province Trade Power less than"
- PROVINCE_TRADE_POWER_MORE_THAN:0 "Province Trade Power at least"
+ PROVINCE_TRADE_POWER_LESS_THAN:0 "Province Trade Power less than "
+ PROVINCE_TRADE_POWER_MORE_THAN:0 "Province Trade Power at least "
  BASE_PROD_LESS_THAN:0 "Base Production less than"
  BASE_PROD_MORE_THAN:0 "Base Production at least"
  BASE_MP_LESS_THAN:0 "Base Manpower less than"
