tributary fix + flags

--- a/localisation/TD_01_flavour_fawud_l_english.yml
+++ b/localisation/TD_01_flavour_fawud_l_english.yml
@@ -56,3 +56,5 @@
 
  convert_to_ilumism_title:0 "Convert to Ilumism"
  convert_to_ilumism_desc:0 "Ilumism is seen by desert tribes of fawud as something ungodly - created to lead good souls astray. But it also becoming more of a symbol of new ways of living in a more modern world."
+
+ MUSARFIC_TOO_PRIDEFUL:0 "Musarfic people are too proud to willingly pay tribute to other Usra."
