native + horde fixes

--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -36,3 +36,6 @@
  estate_burghers_gisian_resettlement_rt:0 "Gisian steppe provinces will lose §G-25%§! §YLocal Development Cost§! reduction."
  estate_burghers_gisian_resettlement_modifier:0 "Gisian Resettlement"
  desc_estate_burghers_gisian_resettlement_modifier:0 "Our slow reclamation of once great Zakarturi empire brought with it many new settlers ready to restore farming capabilities of these lands."
+
+ TD_hordes_steppe_unity:0 "Steppe Unity"
+ desc_TD_hordes_steppe_unity:0 "Individual clans have finally been united into one state to rule them all."
