--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -20,6 +20,7 @@
  habruz_estuary_modifier:0 "Habruz Estuary"
  sipiwimekya_estuary_modifier:0 "Sipiwimekya Estuary"
  moorfluss_estuary_modifier:0 "Moorfluss Estuary"
+ nanatoyatl_estuary_modifier:0 "Nanatoyatl Estuary"
 
  uzkolian_toll:0 "Uzkolian Toll"
  hre_imperial_road:0 "Imperial Road"
